# test-app

./: .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  release-please.yaml
scripts/: setup
src/backend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: main.py
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
