[project]
name = "study-tracker-frontend"
version = "0.1.0"
description = "Frontend for Study Tracker application"
readme = "README.md"
authors = [{ name = "Konrad Ptasznik", email = "konradptasznik97@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "flask>=3.1.1",
    "logging>=0.4.9.6",
    "requests>=2.32.4",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "responses>=0.25.7",
    "ruff>=0.12.8",
]
